src/main/metadata4au/objects/Campaign_City__c.object
<CustomObject>
    <description>Campaign:</description>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Cities</relationshipLabel>
        <relationshipName>Campaign_Cities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>To be updated by trigger to summarize the latest End Date among all Participating Dealers of this Campaign City. Read only on page layout.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>To be updated by trigger to summarize the earliest Start Date among all Participating Dealers of this Campaign City. Read only on page layout.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Campaign City</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Cities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>